--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('./assets/valley.jpeg');
+  background-image: url('./assets/background.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
@@ -24,7 +24,7 @@ body {
 
 .form-title { 
   font-size: 42px; 
-  font-family: 'Avenir'; 
+  font-family: 'Vanir'; 
   font-weight: 800; 
   letter-spacing: 0.5px; 
   color: #e8e8e8; 
@@ -33,7 +33,7 @@ body {
 
 .form-subtitle {
   font-size: 18px;
-  font-family: 'Avenir';
+  font-family: 'Vanir';
   letter-spacing: 0.5px;
   color: #afafaf;
   padding-bottom: 24px;
@@ -51,13 +51,13 @@ body {
   left: 18px;
   font-size: 11px;
   color: rgb(175, 175, 175);
-  font-family: Avenir;
+  font-family: Vanir;
   width: 100px;
 }
 .auth-input {
   background-color: #3e404b;
   color: white;
-  font-family: "Avenir";
+  font-family: "Vanir";
   outline: none;
   border: none;
   border-radius: 8px;
@@ -73,7 +73,7 @@ body {
   border: none;
   outline: none;
   border-radius: 8px;
-  font-family: "Avenir";
+  font-family: "Vanir";
   cursor: pointer;
   transition: all .44s ease;
   -webkit-transition: all .44s ease;
